[workspace]
resolver = "2"
members = [
    "oui",
    "ipv4-asn", 
    "ipv4-country", 
    "ipv6-asn", 
    "ipv6-country", 
    "tcp-service", 
    "udp-service", 
    "as", 
    "country", 
]

[workspace.package]
version = "0.4.0"
authors = ["shellrow <shellrow@fortnium.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rangemap = "1.5"
